--- a/sbi-neomobi-aggregator/public/manifest.json
+++ b/sbi-neomobi-aggregator/public/manifest.json
@@ -15,7 +15,9 @@
   "permissions": [
     "contextMenus",
     "tabs",
-    "storage"
+    "storage",
+    "https://script.google.com/*",
+    "https://script.googleusercontent.com/*"
   ],
   "content_scripts":[{
     "matches":[
